# ml-paper-implementations

./: README.md  pyproject.toml
papers/attention_is_all_you_need/: transformer_numpy.ipynb
papers/attention_is_all_you_need/transformer_torch/: README.md  config.yaml  transformer_output.py
papers/attention_is_all_you_need/transformer_torch/model/: attention.py  embeddings.py  feed_forward.py  normalization.py  positioning.py  transformer.py
papers/attention_is_all_you_need/transformer_torch/visualizations/: viz_positional_encoding.py
